feat: Zig macOS launcher, semester grouping, security hardening
- Add native Zig-based macOS launcher with WebKit WebView
- Shows page now groups by semester (F25, S25 format)
- Table columns: Name pl-8, Actions pr-8, rest centered
- Fix hardcoded admin password - now random or from env var
- Add SESSION_SECRET production warning
- Fix TailwindCSS v4 lint warnings (gradient, data-placeholder, etc)
- Add config.json files to .gitignore
- Create context.md documentation for Claude
- Create production config examples
- Single mock show for testing: F25 Nightlight Guardians

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,16 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 data/
+
+# Local config files
+config.json
+launcher/config.json
+launcher/app/node_modules/
+launcher/app/.next/
+launcher/zig-out/
+launcher/logs/
+logs/
+launcher/.zig-cache/
+launcher/Queue.app/
+launcher/AppIcon.icns
+launcher/Info.plist
