--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,12 +4,11 @@ services:
     container_name: cuesubmit-web-dev
     working_dir: /app
     command: sh -c "npm install && npm run dev"
-    ports:
-      - "3000:3000"
+    network_mode: host
     environment:
       - CUEWEB_MODE=online
-      - CUEWEB_API_BASE=http://REDACTED_IP:8448
-      - REST_GATEWAY_URL=http://REDACTED_IP:8448
+      - CUEWEB_API_BASE=http://127.0.0.1:8448
+      - REST_GATEWAY_URL=http://127.0.0.1:8448
       - JWT_SECRET=REDACTED_SECRET
       - SESSION_SECRET=REDACTED_SECRET
       - DATABASE_PATH=/app/data/cuesubmit.db
