fix: Share database volume between dev and production

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,9 +18,10 @@ services:
       - .:/app
       - /app/node_modules
       - /app/.next
-      - cuesubmit-dev-data:/app/data
+      - cuesubmit-data:/app/data
     # Required for native modules like bcrypt and better-sqlite3
     platform: linux/amd64
 
 volumes:
-  cuesubmit-dev-data:
+  cuesubmit-data:
+    external: true
