fix: mount renderRepo volume and translate UNC to Linux paths for file browser

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,11 @@ services:
       - SESSION_SECRET=REDACTED_SECRET
       - DATABASE_PATH=/app/data/cuesubmit.db
       - ADMIN_INITIAL_PASSWORD=${ADMIN_INITIAL_PASSWORD:-REDACTED_PASSWORD}
+      - RENDER_REPO_PATH=/mnt/RenderOutputRepo
+      - RENDER_REPO_UNC=\\\\REDACTED_IP\\RenderOutputRepo
     volumes:
       - cuesubmit-data:/app/data
+      - /angd_server_pool/renderRepo:/mnt/RenderOutputRepo:ro
 
 volumes:
   cuesubmit-data:
