--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "docker:dev:build": "docker compose -f docker-compose.dev.yml up --build",
     "docker:prod": "docker compose up -d",
     "docker:prod:build": "docker compose up -d --build",
-    "docker:stop": "docker compose down && docker compose -f docker-compose.dev.yml down"
+    "docker:stop": "docker compose down && docker compose -f docker-compose.dev.yml down",
+    "sync-db": "node scripts/sync-db.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
