--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,11 @@ services:
       - DATABASE_PATH=/app/data/cuesubmit.db
       - ADMIN_INITIAL_PASSWORD=${ADMIN_INITIAL_PASSWORD:-REDACTED_PASSWORD}
       - RENDER_REPO_PATH=/mnt/RenderOutputRepo
+      - RENDER_SOURCE_PATH=/mnt/RenderSourceRepository
     volumes:
       - cuesubmit-data:/app/data
       - /angd_server_pool/renderRepo:/mnt/RenderOutputRepo:ro
+      - /opt/perforce/deadlineRenderSource:/mnt/RenderSourceRepository:ro
 
 volumes:
   cuesubmit-data:
