Security hardening, codebase cleanup, doc reorganization
Security:
- Replace all hardcoded secrets with environment variables
- database.ts: Remove hardcoded DB password fallback
- docker-compose: Use required env var syntax (\)
- file-browser, browse/preview/frame-preview routes: Use FILE_SERVER_IP env var
- logs route: Use FILE_SERVER_IP env var for UNC paths
- sync-db: Use PROD_SSH_HOST env var
- .env.example: Rewritten with blank secrets and all variables

Cleanup:
- Remove launcher/ directory (Zig native launcher no longer used)
- Remove dead code: proxy.ts, ui-tokens.ts, frame-log-dialog.tsx
- Remove Next.js boilerplate SVGs (file, globe, next, vercel, window)
- Remove config.json.production.example, .rhda.yaml
- Remove launcher refs from eslint, sonar, gitignore, dockerignore, vscode

Docs:
- Rename README.md -> readme.md, PROJECT_STATUS.md -> docs/project-status.md
- Rename ADMIN_OPERATIONS.md -> docs/admin-operations.md
- Rename HOST_INVENTORY.md -> docs/host-inventory.md
- Merge CODING_STANDARDS.md into docs/context.md (primary AI reference)
- Rewrite readme.md for public repo (clean, no secrets)

--- a/.env.example
+++ b/.env.example
@@ -2,20 +2,28 @@
 # Copy this file to .env.local for local development
 
 # Mode: "online" connects to REST Gateway, "offline" uses mock data
-CUEWEB_MODE=online
+CUEWEB_MODE=offline
 
 # REST Gateway URL (OpenCue REST API)
-# For production (on same machine as gateway): http://127.0.0.1:8448
-# For remote development: http://REDACTED_IP:8448
-CUEWEB_API_BASE=http://REDACTED_IP:8448
-REST_GATEWAY_URL=http://REDACTED_IP:8448
+REST_GATEWAY_URL=http://localhost:8448
 
 # Session secrets (use strong random values in production)
-JWT_SECRET=REDACTED_SECRET
-SESSION_SECRET=REDACTED_SECRET
+JWT_SECRET=
+SESSION_SECRET=
 
 # Database path for SQLite
 DATABASE_PATH=./data/cuesubmit.db
 
 # Initial admin password (only used on first run)
-ADMIN_INITIAL_PASSWORD=REDACTED_PASSWORD
+ADMIN_INITIAL_PASSWORD=changeme
+
+# File server IP for UNC paths (render farm file server)
+FILE_SERVER_IP=
+NEXT_PUBLIC_FILE_SERVER_IP=
+
+# OpenCue PostgreSQL (only needed for direct DB access like show deletion)
+OPENCUE_DB_HOST=localhost
+OPENCUE_DB_PASSWORD=
+
+# SSH host for sync-db script (user@host)
+# PROD_SSH_HOST=user@your-server
