--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
       - CUEWEB_MODE=online
       - CUEWEB_API_BASE=http://127.0.0.1:8448
       - REST_GATEWAY_URL=http://127.0.0.1:8448
-      - JWT_SECRET=REDACTED_SECRET
-      - SESSION_SECRET=REDACTED_SECRET
+      - JWT_SECRET=${JWT_SECRET:?JWT_SECRET is required}
+      - SESSION_SECRET=${SESSION_SECRET:?SESSION_SECRET is required}
       - DATABASE_PATH=/app/data/cuesubmit.db
-      - ADMIN_INITIAL_PASSWORD=${ADMIN_INITIAL_PASSWORD:-REDACTED_PASSWORD}
+      - ADMIN_INITIAL_PASSWORD=${ADMIN_INITIAL_PASSWORD:?ADMIN_INITIAL_PASSWORD is required}
       - RENDER_REPO_PATH=/mnt/RenderOutputRepo
       - RENDER_SOURCE_PATH=/mnt/RenderSourceRepository
     volumes:
