--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=cuesubmit-web
 sonar.projectName=CueSubmit Web
 
 # Exclude reference content, scripts, and build outputs from analysis
-sonar.exclusions=opencue/**,launcher/**,scripts/**,.next/**,out/**,build/**,node_modules/**
+sonar.exclusions=opencue/**,scripts/**,.next/**,out/**,build/**,node_modules/**
 
 # Source directories
 sonar.sources=src
